Updated Agent Table, changed some of the navbar text.

--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -52,7 +52,7 @@ o\:*         { behavior: url(#default#VML) }
 <a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
  <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 <b>
-<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add A Person</font></a></b>
+<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
  <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 <b>
 <a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
@@ -87,7 +87,7 @@ o\:*         { behavior: url(#default#VML) }
          </font></b></font></p>
 		<center> 
 		
-		Please enter the Person ID and License Number for your Agent below to add them to our service!
+		Please enter the Agent ID and License Number for your Agent below to add them to our service!
 		<p><font color = "red">Note: * Required Fields</font></p>
 
 	    <form method = "post" action = "/CSI/AddAgent">
@@ -96,7 +96,7 @@ o\:*         { behavior: url(#default#VML) }
 		<table>
 			<tr>
 				<td>
-					<input type = "text" name = "PERSONID" placeholder="PERSON ID *">&nbsp;
+					<input type = "text" name = "AGENTID" placeholder="AGENT ID *">&nbsp;
 				 </td>
 		   </tr>
 			<tr>
