--- a/html/AddPerson.html
+++ b/html/AddPerson.html
@@ -1,7 +1,7 @@
 	<!-- AddPerson.html -->
 	<html>
 	  <head>
-	    <title>Adding a Person</title>
+	    <title>Adding a Owner</title>
 		<link href="/styles.css" rel="stylesheet" />
 <!-- Paste this between the HEAD tags of your html document -->
 
@@ -49,7 +49,7 @@ o\:*         { behavior: url(#default#VML) }
 	<a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
 	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 	<b>
-	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add A Person</font></a></b>
+	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
 	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 	<b>
 	<a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
@@ -87,16 +87,16 @@ o\:*         { behavior: url(#default#VML) }
          </font></b></font></p>
 		<center> 
 		
-		Want to add a new person? Enter the person ID and name below!
+		Want to add a new owner? Enter the Owner ID and name below!
 		<p><font color = "red">Note: * Required Fields</font></p>
 
-	    <form method = "post" action = "/MCS5303/AddPerson">
+	    <form method = "post" action = "/MCS5303/AddOwner">
 		<p> 
 		
 		<table>
 		  <tr>
 			 <td>
-	            <input type = "number" name = "PERSONID" placeholder="PERSON ID *" min="0">&nbsp;
+	            <input type = "number" name = "OWNERID" placeholder="OWNER ID *" min="0">&nbsp;
 			 </td>
 		   </tr>
 		   <tr>
