--- a/html/delete.html
+++ b/html/delete.html
@@ -49,7 +49,7 @@ o\:*         { behavior: url(#default#VML) }
 	<a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
 	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 	<b>
-	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add A Person</font></a></b>
+	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
 	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
 	<b>
 	<a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
