Updated all Java files to work with queries available on the current webpage, updated file paths in HTML to (hopefully) link to these .java classes properly. Some queries required updates due to database design changes we've made, so those should have been done.

--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -90,7 +90,7 @@ o\:*         { behavior: url(#default#VML) }
 		Please enter the Agent ID and License Number for your Agent below to add them to our service!
 		<p><font color = "red">Note: * Required Fields</font></p>
 
-	    <form method = "post" action = "/CSI/AddAgent">
+	    <form method = "post" action = "/WEB-INF/classes/AddAgent.java">
 		<p> 
 		
 		<table>
