--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -92,7 +92,7 @@ o\:*         { behavior: url(#default#VML) }
 		Enter a Home ID and Address below to add your new home to our database!
 		<p><font color = "red">Note: * required fields</font></p>
 
-	    <form method = "post" action = "/CSI/AddNewHome">
+	    <form method = "post" action = "/WEB-INF/classes/AddNewHome.java">
 		<p> 
 		
 		<table>
