--- a/html/AddPerson.html
+++ b/html/AddPerson.html
@@ -90,7 +90,7 @@ o\:*         { behavior: url(#default#VML) }
 		Want to add a new owner? Enter the Owner ID and name below!
 		<p><font color = "red">Note: * Required Fields</font></p>
 
-	    <form method = "post" action = "/MCS5303/AddOwner">
+	    <form method = "post" action = "/WEB-INF/classes/AddOwner.java">
 		<p> 
 		
 		<table>
