--- a/html/DeleteHome.html
+++ b/html/DeleteHome.html
@@ -85,7 +85,7 @@ o\:*         { behavior: url(#default#VML) }
 		
 		<center>Enter the Home ID below to delete your home from our database</center>
 
-	    <form method = "post" action = "/CSI/DeleteHome">
+	    <form method = "post" action = "/WEB-INF/classes/DeleteHome.java">
 	      <p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
 		  <center>
 		  <table>
