--- a/html/Selecthome.html
+++ b/html/Selecthome.html
@@ -86,7 +86,7 @@ o\:*         { behavior: url(#default#VML) }
 		
 		Enter the Home ID below to search for that specific home.
 
-	    <form method = "get" action = "/CSI/Selecthome">
+	    <form method = "get" action = "/WEB-INF/classes/Selecthome.java">
 	        <p>&nbsp;&nbsp;&nbsp;&nbsp; 
 			</p>
              
