--- a/html/delete.html
+++ b/html/delete.html
@@ -88,7 +88,7 @@ o\:*         { behavior: url(#default#VML) }
 		Want to delete your home from our database? Just enter your last name below, and click the 'Submit' Button
 		<p><font color = "#FF0000">* required fields</font></p>
 
-	    <form method = "post" action = "/CSI/SimpleDelete">
+	    <form method = "post" action = "/WEB-INF/classes/SimpleDelete">
 			<table>
 				<tr>
 				   <td>
