--- a/html/homesForSale.html
+++ b/html/homesForSale.html
@@ -87,7 +87,7 @@ o\:*         { behavior: url(#default#VML) }
 		Please enter the city you would like to search below.
 		<br></br>
 
-	    <form method = "get" action = "/MCS5303/homesForSale">
+	    <form method = "get" action = "/WEB-INF/classes/HomesForSale.java">
 	     <center>
 			 <table>
 				<tr>
