--- a/html/update.html
+++ b/html/update.html
@@ -89,7 +89,7 @@ o\:*         { behavior: url(#default#VML) }
 		Please enter the last name to be updated in the database, and their new first name below.
 		<p><font color = "#FF0000">* required fields</font></p>
 
-	    <form method = "post" action = "/CSI/SimpleUpdate">
+	    <form method = "post" action = "/WEB-INF/classes/SimpleUpdate.java">
 			<table>
 				<tr>
 				   <td>
