--- a/html/updateOwner.html
+++ b/html/updateOwner.html
@@ -87,7 +87,7 @@ o\:*         { behavior: url(#default#VML) }
 		Enter an Owner's ID and their new Profession below to update our database.
 		<br></br>
 
-	    <form method = "get" action = "/CSI/updateOwner">
+	    <form method = "get" action = "/WEB-INF/classes/UpdateOwner.java">
 	        <p>&nbsp;&nbsp;&nbsp;&nbsp; 
 			</p>
             
