--- a/html/AddPerson.html
+++ b/html/AddPerson.html
@@ -1,27 +1,22 @@
-	<!-- AddPerson.html -->
-	<html>
-	  <head>
-	    <title>Adding a Owner</title>
-		<link href="/styles.css" rel="stylesheet" />
-<!-- Paste this between the HEAD tags of your html document -->
+<!-- AddPerson.html -->
+<html>
 
-<script language="JavaScript">
+<head>
+	<title>Adding a Owner</title>
+	<link href="/styles.css" rel="stylesheet" />
+	<!-- Paste this between the HEAD tags of your html document -->
 
-	var isIE4 = false;
-	function CheckBrowser() 
-	{ if (navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion.charAt(0) >= 4) { isIE4 = true; }}
-	function mOvr(src,clrOver)
-	{ if (!src.contains(event.fromElement)) { src.style.cursor = 'hand'; src.bgColor = clrOver; src.children.tags('A')[0].style.color = '#ffffff';}}
-	function mOut(src,clrIn) 
-	{ if (!src.contains(event.toElement)) { src.style.cursor = 'default'; src.bgColor = clrIn;  src.children.tags('A')[0].style.color = '#ffffff';}}
-	function mClk(src) 
-	{ if(event.srcElement.tagName=='TD'){src.children.tags('A')[0].click();} }
-	function mOvrTop(src,clrOver)
-	{ if (!src.contains(event.fromElement)) { src.style.cursor = 'hand'; src.bgColor = clrOver;}}
-	function mOutTop(src,clrIn) 
-	{ if (!src.contains(event.toElement)) { src.style.cursor = 'default'; src.bgColor = clrIn;}}
-</script>
-<!--[if !mso]>
+	<script language="JavaScript">
+
+		var isIE4 = false;
+		function CheckBrowser() { if (navigator.appName == "Microsoft Internet Explorer" && navigator.appVersion.charAt(0) >= 4) { isIE4 = true; } }
+		function mOvr(src, clrOver) { if (!src.contains(event.fromElement)) { src.style.cursor = 'hand'; src.bgColor = clrOver; src.children.tags('A')[0].style.color = '#ffffff'; } }
+		function mOut(src, clrIn) { if (!src.contains(event.toElement)) { src.style.cursor = 'default'; src.bgColor = clrIn; src.children.tags('A')[0].style.color = '#ffffff'; } }
+		function mClk(src) { if (event.srcElement.tagName == 'TD') { src.children.tags('A')[0].click(); } }
+		function mOvrTop(src, clrOver) { if (!src.contains(event.fromElement)) { src.style.cursor = 'hand'; src.bgColor = clrOver; } }
+		function mOutTop(src, clrIn) { if (!src.contains(event.toElement)) { src.style.cursor = 'default'; src.bgColor = clrIn; } }
+	</script>
+	<!--[if !mso]>
 <style>
 v\:*         { behavior: url(#default#VML) }
 o\:*         { behavior: url(#default#VML) }
@@ -30,135 +25,179 @@ o\:*         { behavior: url(#default#VML) }
 <![endif]--><!--[if gte mso 9]>
 <xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
 </xml><![endif]-->
-  
-<center> 
 
-	<TABLE BORDER="5">
-	
-	
-	<TR>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	 <a style="color: white" href="homes"><font face="Tahoma" size="3">Homes</font></a></b></td>
-	 
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	 <a style="color: white" href="Selecthome.html"><font face="Tahoma" size="3">Select A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	
-	<a style="color: white" href="DeleteHome.html"><font face="Tahoma" size="3">Delete A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	
-	<b>
-	<a style="color: white" href="homesForSale.html"><font face="Tahoma" size="3">Homes For Sale</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="Price.html"><font face="Tahoma" size="3">Below A Price</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="updateOwner.html"><font face="Tahoma" size="3">Update An Owner</font></a>
-	</b>
-	</td>
-	<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-		<b>
-		<a style="color: white" href="../index.html"><font face="Tahoma" size="3">Landing Page</font></a>
-		</b>
-	  </td>
-	</tr>
-	</table>
-	</center> 
-	  </head>
-	  <body bgcolor="#ededed">
+	<center>
+
+		<TABLE BORDER="5">
 
 
-	  <Body Text="#000000">
-	    &nbsp;<p align="center"><font color="#000000""><b>
-        <font face="Arial" size="4">&nbsp;</font><font face="Bernard MT Condensed" size="5">Add A New Person
-         </font></b></font></p>
-		<center> 
-		
-		Want to add a new owner? Enter the Owner ID and name below!
-		<p><font color = "red">Note: * Required Fields</font></p>
-
-	    <form method = "post" action = "/WEB-INF/classes/AddOwner.java">
-		<p> 
-		
-		<table>
-		  <tr>
-			 <td>
-	            <input type = "number" name = "OWNERID" placeholder="OWNER ID *" min="0">&nbsp;
-			 </td>
-		   </tr>
-		   <tr>
-			  <td>
-	              <input type = "text" name = "NAME" placeholder="NAME *" size="25"></span></font>&nbsp; 
-			   </td>
-			   <tr>
-			  <td>
-	              <input type = "number" name = "SSN" placeholder="SSN (EX. 123456789)" size="25" min="0"></span></font>&nbsp;
-			   </td>
-		   </tr>
-		   <tr>
-			  <td>
-	              <input type = "text" name = "PROFESSION" placeholder="PROFESSION" size="25"></span></font>&nbsp; 
-			   </td>
-		   </tr>
-		   <tr>
-			  <td>
-	              <input type = "number" name = "INCOME" placeholder="INCOME" size="25" min="0"></span></font>&nbsp; 
-			   </td>
-		   </tr>
-		   
-		 </table>
-		  <table>
-		     <tr>
-			    <td>
-			        <input type = "submit" name = "Submit" value = "Submit">
+			<TR>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="homes">
+							<font face="Tahoma" size="3">Homes</font>
+						</a></b>
 				</td>
-				<td>
-	               <input type = "reset" value = "Reset">
+
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="Selecthome.html">
+							<font face="Tahoma" size="3">Select A Home</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="AddNewHome.html">
+							<font face="Tahoma" size="3">Add A Home</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="AddPerson.html">
+							<font face="Tahoma" size="3">Add An Owner</font>
+						</a></b>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="AddAgent.html">
+							<font face="Tahoma" size="3">Add An Agent</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+
+						<a style="color: white" href="DeleteHome.html">
+							<font face="Tahoma" size="3">Delete A Home</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+
+					<b>
+						<a style="color: white" href="homesForSale.html">
+							<font face="Tahoma" size="3">Homes For Sale</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="Price.html">
+							<font face="Tahoma" size="3">Below A Price</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="updateOwner.html">
+							<font face="Tahoma" size="3">Update An Owner</font>
+						</a>
+					</b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="../index.html">
+							<font face="Tahoma" size="3">Landing Page</font>
+						</a>
+					</b>
 				</td>
 			</tr>
-		  </table>
-	      </p>
-	    </form>
-		
+		</table>
+	</center>
+</head>
+
+<body bgcolor="#ededed">
+
+
+	<Body Text="#000000">
+		&nbsp;<p align="center">
+			<font color="#000000""><b>
+        <font face=" Arial" size="4">&nbsp;</font>
+			<font face="Bernard MT Condensed" size="5">Add A New Person
+			</font></b></font>
+		</p>
+		<center>
+
+			Want to add a new owner? Enter the Owner ID and name below!
+			<p>
+				<font color="red">Note: * Required Fields</font>
+			</p>
+
+			<form method="post" action="/WEB-INF/classes/AddOwner">
+				<p>
+
+				<table>
+					<tr>
+						<td>
+							<input type="number" name="OWNERID" placeholder="OWNER ID *" min="0">&nbsp;
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="text" name="NAME" placeholder="NAME *" size="25"></span></font>&nbsp;
+						</td>
+					<tr>
+						<td>
+							<input type="number" name="SSN" placeholder="SSN (EX. 123456789)" size="25" min="0"></span>
+							</font>&nbsp;
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="text" name="PROFESSION" placeholder="PROFESSION" size="25"></span></font>&nbsp;
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="number" name="INCOME" placeholder="INCOME" size="25" min="0"></span></font>
+							&nbsp;
+						</td>
+					</tr>
+
+				</table>
+				<table>
+					<tr>
+						<td>
+							<input type="submit" name="Submit" value="Submit">
+						</td>
+						<td>
+							<input type="reset" value="Reset">
+						</td>
+					</tr>
+				</table>
+				</p>
+			</form>
+
 		</center>
-		
-		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32"
 
-height="32"></OBJECT>
-<SCRIPT>
+		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
+		<SCRIPT>
 
-var MerlinID;
-var MerlinACS;
-ricci.Connected = true;
-MerlinLoaded = LoadLocalAgent(MerlinID, MerlinACS);
-Merlin = ricci.Characters.Character(MerlinID);
-Merlin.Show();
-Merlin.Play("congratulate");
-Merlin.Speak("Wonderful,...Let's add a new person.  ..");
-Merlin.Play("domagic1");
-//Merlin.Speak("Greating Doctor Azar, I am glad to see you at..house dot com.  ");
-Merlin.Hide();
-function LoadLocalAgent(CharID, CharACS) {
-LoadReq = ricci.Characters.Load(CharID, CharACS);
-return(true);
-}
+			var MerlinID;
+			var MerlinACS;
+			ricci.Connected = true;
+			MerlinLoaded = LoadLocalAgent(MerlinID, MerlinACS);
+			Merlin = ricci.Characters.Character(MerlinID);
+			Merlin.Show();
+			Merlin.Play("congratulate");
+			Merlin.Speak("Wonderful,...Let's add a new person.  ..");
+			Merlin.Play("domagic1");
+			//Merlin.Speak("Greating Doctor Azar, I am glad to see you at..house dot com.  ");
+			Merlin.Hide();
+			function LoadLocalAgent(CharID, CharACS) {
+				LoadReq = ricci.Characters.Load(CharID, CharACS);
+				return (true);
+			}
 // BY STAR28.com
-</SCRIPT>
-  
-		
-		
-	  </body>
+		</SCRIPT>
+
+
+
+	</body>
+
 </html>
