Updates to input fields across the board so that they match what we are storing in our database, as well as adding the 'Add Your Company' links onto each page that allow us to store company data about agents.

--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -57,9 +57,10 @@ o\:*         { behavior: url(#default#VML) }
         <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
           onclick="mClk(this);" bgcolor="#2272a8">
           <b>
-            <a style="color: white" href="AddPerson.html">
+            <a style="color: white" href="AddOwner.html">
               <font face="Tahoma" size="3">Add A Person</font>
             </a></b>
+        </td>
         <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
           onclick="mClk(this);" bgcolor="#2272a8">
           <b>
@@ -67,6 +68,13 @@ o\:*         { behavior: url(#default#VML) }
               <font face="Tahoma" size="3">Add An Agent</font>
             </a></b>
         </td>
+        <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="AddCompany.html">
+							<font face="Tahoma" size="3">Add Your Company</font>
+						</a></b>
+				</td>
         <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
           onclick="mClk(this);" bgcolor="#2272a8">
           <b>
