--- a/html/updateOwner.html
+++ b/html/updateOwner.html
@@ -31,52 +31,94 @@ o\:*         { behavior: url(#default#VML) }
 <xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
 </xml><![endif]-->
   
-<center> 
-
+<center>
 	<TABLE BORDER="5">
-	
-	
-	<TR>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	 <a style="color: white" href="homes"><font face="Tahoma" size="3">Homes</font></a></b></td>
-	 
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	 <a style="color: white" href="Selecthome.html"><font face="Tahoma" size="3">Select A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	 <b>
-	
-	<a style="color: white" href="DeleteHome.html"><font face="Tahoma" size="3">Delete A Home</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	
-	<b>
-	<a style="color: white" href="homesForSale.html"><font face="Tahoma" size="3">Homes For Sale</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="Price.html"><font face="Tahoma" size="3">Below A Price</font></a></b></td>
-	 <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-	<b>
-	<a style="color: white" href="updateOwner.html"><font face="Tahoma" size="3">Update An Owner</font></a>
-	</b>
-	</td>
-	<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');" onclick="mClk(this);" bgcolor="#2272a8">
-		<b>
-		<a style="color: white" href="../index.html"><font face="Tahoma" size="3">Landing Page</font></a>
-		</b>
-	  </td>
-	</tr>
+		<TR>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="homes">
+						<font face="Tahoma" size="3">Homes</font>
+					</a></b>
+			</td>
+
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="Selecthome.html">
+						<font face="Tahoma" size="3">Select A Home</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="AddNewHome.html">
+						<font face="Tahoma" size="3">Add A Home</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="AddOwner.html">
+						<font face="Tahoma" size="3">Add An Owner</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="AddAgent.html">
+						<font face="Tahoma" size="3">Add An Agent</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="AddCompany.html">
+						<font face="Tahoma" size="3">Add Your Company</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+
+					<a style="color: white" href="DeleteHome.html">
+						<font face="Tahoma" size="3">Delete A Home</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+
+				<b>
+					<a style="color: white" href="homesForSale.html">
+						<font face="Tahoma" size="3">Homes For Sale</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="Price.html">
+						<font face="Tahoma" size="3">Below A Price</font>
+					</a></b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="updateOwner.html">
+						<font face="Tahoma" size="3">Update An Owner</font>
+					</a>
+				</b>
+			</td>
+			<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+				onclick="mClk(this);" bgcolor="#2272a8">
+				<b>
+					<a style="color: white" href="../index.html">
+						<font face="Tahoma" size="3">Landing Page</font>
+					</a>
+				</b>
+			</td>
+		</tr>
 	</table>
-	</center>  
+</center>
 	  </head>
 	  <Body bgcolor="#ededed" Text="#000000">
 	    &nbsp;<p align="center"><font color="#000000""><b>
@@ -94,7 +136,7 @@ o\:*         { behavior: url(#default#VML) }
 			<table>
 				<tr>
 				   <td>
-					  <input type = "text" name = "PERSONID" placeholder="Owner ID">&nbsp;
+					  <input type = "text" name = "SSN" placeholder="SSN">&nbsp;
 				   </td>
 				 </tr>
 				 <tr>
