--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -59,14 +59,22 @@ o\:*         { behavior: url(#default#VML) }
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
-						<a style="color: white" href="AddPerson.html">
+						<a style="color: white" href="AddOwner.html">
 							<font face="Tahoma" size="3">Add An Owner</font>
 						</a></b>
+				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="AddAgent.html">
 							<font face="Tahoma" size="3">Add An Agent</font>
+						</a></b>
+				</td>
+				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
+					onclick="mClk(this);" bgcolor="#2272a8">
+					<b>
+						<a style="color: white" href="AddCompany.html">
+							<font face="Tahoma" size="3">Add Your Company</font>
 						</a></b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
@@ -163,13 +171,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="number" name="FULLBATHROOMS" placeholder="FULL BATHROOMS" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="HALFBATHROOMS" placeholder="HALF BATHROOMS" size="25"
+							<input type="number" name="BATHROOMS" placeholder="BATHROOMS" size="25"
 								min="0"></span></font>&nbsp;
 						</td>
 					</tr>
@@ -182,6 +184,18 @@ o\:*         { behavior: url(#default#VML) }
 					<tr>
 						<td>
 							<input type="number" name="YEARCONSTRUCTED" placeholder="YEAR CONSTRUCTED" size="25"
+								min="0"></span></font>&nbsp;
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="text" name="CATEGORY" placeholder="CATEGORY (EX. LUXURY HOME, APARTMENT)" size="25"
+								min="0"></span></font>&nbsp;
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<input type="number" name="HOMEPRICE" placeholder="PRICE (USD)" size="25"
 								min="0"></span></font>&nbsp;
 						</td>
 					</tr>
