--- a/html/indx.html
+++ b/html/indx.html
@@ -46,7 +46,7 @@ o\:*         { behavior: url(#default#VML) }
 <a style="color: white" href="AddNewHome.html"><font face="Tahoma" size="3">Add A Home</font></a></b></td>
  <td align="center" width="105" onmouseover="mOvr(this,'#9999cc');" onmouseout="mOut(this,'#666699');" onclick="mClk(this);" bgcolor="#666699">
 <b>
-<a style="color: white" href="AddPerson.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
+<a style="color: white" href="AddOwner.html"><font face="Tahoma" size="3">Add An Owner</font></a></b>
  <td align="center" width="105" onmouseover="mOvr(this,'#9999cc');" onmouseout="mOut(this,'#666699');" onclick="mClk(this);" bgcolor="#666699">
 <b>
 <a style="color: white" href="AddAgent.html"><font face="Tahoma" size="3">Add An Agent</font></a></b></td>
