making minor changes to make implementation successful

--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -128,7 +128,7 @@ o\:*         { behavior: url(#default#VML) }
 			<font color="red">Note: * Required Fields</font>
 		</p>
 
-		<form method="post" action="../WEB-INF/classes/AddAgent">
+		<form method="post" action="CSI/AddAgent">
 			<p>
 
 			<table>
