--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -33,7 +33,7 @@ o\:*         { behavior: url(#default#VML) }
 		<TABLE BORDER="5">
 
 
-			<TR>
+			<tr>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
@@ -130,7 +130,7 @@ o\:*         { behavior: url(#default#VML) }
 				<font color="red">Note: * required fields</font>
 			</p>
 
-			<form method="post" action="/WEB-INF/classes/AddNewHome.java">
+			<form method="post" action="/CSI/AddNewHome">
 				<p>
 
 				<table>
