--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -125,7 +125,7 @@ o\:*         { behavior: url(#default#VML) }
       Complete the form below with your details and click the button to compute your loan payment!
       <br></br>
 
-      <form method="get" action="/MCS3603/jsp/ComputeLoan">
+      <form method="get" action="CSI/ComputeLoan">
         <table>
           <tr>
             <td>
