--- a/html/AddPerson.html
+++ b/html/AddPerson.html
@@ -128,7 +128,7 @@ o\:*         { behavior: url(#default#VML) }
 				<font color="red">Note: * Required Fields</font>
 			</p>
 
-			<form method="post" action="/WEB-INF/classes/AddOwner">
+			<form method="post" action="CSI/AddOwner">
 				<p>
 
 				<table>
