Updated the index page with actual content, including testimonial photos.

--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -27,10 +27,7 @@ o\:*         { behavior: url(#default#VML) }
 </xml><![endif]-->
 
 	<center>
-
 		<TABLE BORDER="5">
-
-
 			<TR>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
@@ -136,7 +133,7 @@ o\:*         { behavior: url(#default#VML) }
 				<font color="red">Note: * Required Fields</font>
 			</p>
 
-			<form method="post" action="CSI/AddOwner">
+			<form method="post" action="/WEB-INF/classes/AddOwner">
 				<p>
 
 				<table>
