--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns="http://www.w3.org/TR/REC-html40">
-<title>   </title>
+<title> E-Housing </title>
 <head>   
 <META http-equiv="Content-Type" content="text/html; charset=windows-1256">
 <link rel="File-List" href="indx_files/filelist.xml">
+<link href="/styles.css" rel="stylesheet" />
 <!-- Paste this between the HEAD tags of your html document -->
 
 <script language="JavaScript">
@@ -119,92 +120,55 @@ o\:*         { behavior: url(#default#VML) }
     </tr>
   </table>
 </center>
-  
-
 </head>
 
+<center>
+  <Body Text="#000000">
+		&nbsp;<p align="center">
+			<font color="#000000""><b>
+        <font face=" Arial" size="4">&nbsp;</font>
+			<font face="Bernard MT Condensed" size="6">Welcome to E-Housing
+			</font></b></font>
+		</p>
+      <h2>
+        The premier database web service to search for Home Owners, Houses, Real-Estate Agents, and more!
+      </h2><br>
 
+      <img src="/assets/affordable_house.jpg" width="1000" height="600">
+      <h3>Looking for your next House in a city near you? Browse for houses in any city using our City Search feature <a href="html/homesForSale.html">here</a>!</h3><br>
 
-<body background="#800000" bgcolor="white">
+      <img src="/assets/neighborhood.jpg" width="1000" height="600">
+      <h3>Are you a proud Home Owner who <i>isn't</i> registered with us? Join our community of registered Home Owners <a href="html/AddOwner.html">here!</a></h3></p>
 
-
+      <br><br><br>
+      <h2>What people are saying...</h2>
+      <TABLE style="width:50%">
+          <tr>
+            <td style="padding:20px">
+              <img class="rounded-circle" src="assets/testimonials-1.jpg" alt="..." width="300" height="300"/>
+              <center><h4>Cassandra F.</h4></center>
+              <center><p>"So happy with my new house I found on E-Housing."</p></center>
+            </td>
+            <td style="padding:20px">
+              <img class="rounded-circle" src="assets/testimonials-2.jpg" alt="..." width="300" height="300"/>
+              <center><h4>Spencer M.</h4></center>
+              <center><p>"So glad I was able to sell this home I used to own using E-Housing."</p></center>
+            </td>
+            <td style="padding:20px">
+              <img class="rounded-circle" src="assets/testimonials-3.jpg" alt="..." width="300" height="300"/>
+              <center><h4>Elizabeth T.</h4></center>
+              <center><p>"From an Agent here on E-Housing, thanks so much for putting the customer first!"</p></center>
+            </td>
+          </tr>
+    </TABLE>
+</center>
 
 <center>
-<table bgcolor="white" cellpadding="12" border="4" style="border-collapse: collapse" bordercolor="#111111" cellspacing="1" height="528" width="486">
-
-<tr><td colspan="2" bgcolor="white" height="2" width="452"><center><i>
-<b>
-
-
-
-
-
-
-
-
-  <div align="center">
-    <center>
-
-</td></tr>
-<tr bgcolor="white" ><td height="190" width="272">
-
-<b>
-
-  <font color="white">
-
-<font face="Bernard MT Condensed" size="5">"Welcome To House.Com"</font></b></font></p>
-
-
-</td></tr>
-
-
-
-
-
-
- 
-    </center>
-  </div>
-
-
-</b></i></center></td></tr>
-
-
-
-
-<tr bgcolor="white"><td bgcolor="#666666" height="38" width="272">
-<font face="Bernard MT Condensed" size="5">For Your Convience This Web Page Can Add, Delete, View and Update</font></b></font></p>
-
-<b><font color="white"> </font>
-
-
-</b>
-
-
-</td></tr>
-<tr bgcolor="white" ><td height="190" width="272">
-
-<b>
-
-  <font color="white">
-
-
-<br>
-  </font><font color="white">
-
-
-
-<font face="Bernard MT Condensed" size="5">Pick Your Dream Home Throughout Metro Detroit And Surrounding Areas</font></b></font></p>
-
-
-</td></tr>
-<tr bgcolor="white"><td bgcolor="#DAB692" height="195" width="272"><center>
-
-
-&nbsp;<p><b>CSI<br>
-Winter- 2023<br>
-Course Project <br> 
-Instructor: Dr. Naser El-Bathy </b></p>
+  &nbsp;<p><b>CSI<br>
+    Winter- 2023<br>
+    Course Project <br> 
+    Instructor: Dr. Naser El-Bathy </b></p>
+</center>
 
 
 
@@ -221,7 +185,7 @@ Instructor: Dr. Naser El-Bathy </b></p>
 
 
   
-   <font color="white" size="4">*2010 CSI Project Web Site 
+   <font color="black" size="2">*2023 CSI Project Web Site
    
    </form>
    
