--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -122,14 +122,15 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<body bgcolor="#ededed">
+<body bgcolor="cbf9ff">
 	&nbsp;<p align="center">
-		<font color="#000000""><b>
-        <font face=" Arial" size="4">&nbsp;</font>
-		<font face="Bernard MT Condensed" size="5">Add A New Agent
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Add A New Agent
 		</font></b></font>
 	</p>
 	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 
 		Please enter the Agent ID and License Number for your Agent below to add them to our service!
 		<p>
@@ -171,7 +172,7 @@ o\:*         { behavior: url(#default#VML) }
 			</table>
 			</p>
 		</form>
-
+</aside>
 	</center>
 
 	<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
