--- a/html/AddCompany.html
+++ b/html/AddCompany.html
@@ -116,18 +116,15 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<body bgcolor="#ededed">
-
-
-	<Body Text="#000000">
-		&nbsp;<p align="center">
-			<font color="#000000""><b>
-        <font face=" Arial" size="4">&nbsp;</font>
-			<font face="Bernard MT Condensed" size="5">Add A Company
-			</font></b></font>
-		</p>
-		<center>
-
+<body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Add A Company
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 			Are you an Agent that would like to add your company? Enter the details below and click 'Submit' to add your company to our list.
 			<p>
 				<font color="red">Note: * Required Fields</font>
@@ -171,7 +168,7 @@ o\:*         { behavior: url(#default#VML) }
 				</table>
 				</p>
 			</form>
-
+</aside>
 		</center>
 
 		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
