--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -121,17 +121,15 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<body bgcolor="#ededed">
-
-
-	<Body Text="#000000">
-		&nbsp;<p align="center">
-			<font color="black""><b>
-	  <font face=" Arial" size="4">&nbsp;</font>
-			<font face="Bernard MT Condensed" size="5">Add A New Home
-			</font></b></font>
-		</p>
-		<center>
+<body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Add A New Home
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 
 			Enter a Home ID and Address below to add your new home to our database!
 			<p>
@@ -213,7 +211,7 @@ o\:*         { behavior: url(#default#VML) }
 				</table>
 				</p>
 			</form>
-
+</aside>
 		</center>
 
 		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
