--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -116,17 +116,15 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<body bgcolor="#ededed">
-
-
-	<Body Text="#000000">
-		&nbsp;<p align="center">
-			<font color="#000000""><b>
-        <font face=" Arial" size="4">&nbsp;</font>
-			<font face="Bernard MT Condensed" size="5">Add A New Person
-			</font></b></font>
-		</p>
-		<center>
+<body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Add A New Person
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 
 			Want to add a new owner? Enter the Owner ID and name below!
 			<p>
@@ -183,7 +181,7 @@ o\:*         { behavior: url(#default#VML) }
 				</table>
 				</p>
 			</form>
-
+</aside>
 		</center>
 
 		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
