--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -119,16 +119,15 @@ o\:*         { behavior: url(#default#VML) }
   </center>
 </head>
 
-<body bgcolor="#ededed">
-
-  <Body Text="#000000">
-    &nbsp;<p align="center">
-      <font color="black""><b>
-        <font face=" Arial" size="4">&nbsp;</font>
-      <font face="Bernard MT Condensed" size="5">Compute Loan Payment
-      </font></b></font>
-    </p>
-    <center>
+<body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Compute Loan Payment
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 
       Complete the form below with your details and click the button to compute your loan payment!
       <br></br>
@@ -164,6 +163,7 @@ o\:*         { behavior: url(#default#VML) }
           </tr>
         </table>
       </form>
+		</aside>
     </center>
   </body>
 
