--- a/html/DeleteHome.html
+++ b/html/DeleteHome.html
@@ -111,16 +111,16 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<body bgcolor="#ededed">
+<body bgcolor="cbf9ff">
 	&nbsp;<p align="center">
 		<font color="#000000"><b>
-				<font face="Arial" size="4">&nbsp;
-				</font>
-				<font face="Bernard MT Condensed" size="5">Home Deletion</font>
-			</b></font>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Home Deletion
+		</font></b></font>
 	</p>
-
-	<center>Enter the Home ID below to delete your home from our database</center>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
+			Enter the Home ID below to delete your home from our database</center>
 
 	<form method="post" action="CSI/DeleteHome.java">
 		<p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
@@ -144,6 +144,7 @@ o\:*         { behavior: url(#default#VML) }
 				</tr>
 			</table>
 	</form>
+		</aside>
 	</center>
 
 	<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
