--- a/html/Price.html
+++ b/html/Price.html
@@ -120,11 +120,15 @@ o\:*         { behavior: url(#default#VML) }
 	</table>
 </center> 
 	  </head>
-	  <Body bgcolor="#ededed" Text="#000000">
-	    &nbsp;<p align="center"><font color="#000000""><b>
-        <font face="Arial" size="4">&nbsp;</font><font face="Bernard MT Condensed" size="5">Find Homes for Affordable Prices
-         </font></b></font></p>
-		<center> 
+	  <body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Find Homes For Affordable Prices
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 		
 		Please enter a price below and click 'Submit' to find homes for sale for that price or less!
 		<br></br>
@@ -152,6 +156,7 @@ o\:*         { behavior: url(#default#VML) }
 					 </tr>
 				   </table>
 	     </form>
+		    </aside>
         </center>
 		 <OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32"
 
