--- a/html/SimpleRegistration.html
+++ b/html/SimpleRegistration.html
@@ -3,8 +3,10 @@
 	  <head>
 	    <title>Simple Registration without Confirmation</title>
 	  </head>
-	  <body>
-	  <center>
+	  <body bgcolor="cbf9ff">
+	
+	<center>
+	 <aside style="background-color: #ededed; width:50%; padding:5%">
 	    Please register to your instructor's student address book.
 
 	    <form method = "post" action = "/CSI/SimpleRegistration">
@@ -36,6 +38,7 @@
 	      </p>
 	    </form>
 	    <p><font color = "#FF0000">* required fields</font></p>
+		  </aside>
 		</center>
 	  </body>
 </html>
