--- a/html/homesForSale.html
+++ b/html/homesForSale.html
@@ -111,15 +111,15 @@ o\:*         { behavior: url(#default#VML) }
 	</center>
 </head>
 
-<Body bgcolor="#ededed" Text="#000000">
+<body bgcolor="cbf9ff">
 	&nbsp;<p align="center">
-		<font color="#000000""><b>
-        <font face=" Arial" size="4">&nbsp;</font>
-		<font face="Bernard MT Condensed" size="5">Homes for Sale in a Given City
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Homes For Sale In Given City
 		</font></b></font>
 	</p>
 	<center>
-
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 		Please enter the city you would like to search below.
 		<br></br>
 
@@ -144,6 +144,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 				</table>
 		</form>
+			</aside>
 	</center>
 	<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
 	<SCRIPT>
