--- a/html/update.html
+++ b/html/update.html
@@ -121,12 +121,15 @@ o\:*         { behavior: url(#default#VML) }
 	</table>
 </center>
 	  </head>
-	  <body bgcolor="#ededed">
-		<Body Text="#000000">
-			&nbsp;<p align="center"><font color="black""><b>
-			<font face="Arial" size="4">&nbsp;</font><font face="Bernard MT Condensed" size="5">Simple Update
-			 </font></b></font></p>
-			<center> 
+	  <body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Simple Update
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 			
 		Please enter the last name to be updated in the database, and their new first name below.
 		<p><font color = "#FF0000">* required fields</font></p>
@@ -157,6 +160,7 @@ o\:*         { behavior: url(#default#VML) }
 				   </tr>
 				 </table>
 	    </form>
+		</aside>
 		</center>
 	  </body>
 </html>
