--- a/html/updateOwner.html
+++ b/html/updateOwner.html
@@ -120,11 +120,15 @@ o\:*         { behavior: url(#default#VML) }
 	</table>
 </center>
 	  </head>
-	  <Body bgcolor="#ededed" Text="#000000">
-	    &nbsp;<p align="center"><font color="#000000""><b>
-        <font face="Arial" size="4">&nbsp;</font><font face="Bernard MT Condensed" size="5">Update Owner Profession
-         </font></b></font></p>
-		<center> 
+	 <body bgcolor="cbf9ff">
+	&nbsp;<p align="center">
+		<font color="#000000"><b>
+        <font face="Arial" size="4">&nbsp;</font>
+		<font size="6">Update Owner Profession
+		</font></b></font>
+	</p>
+	<center>
+		<aside style="background-color: #ededed; width:50%; padding:5%">
 		
 		Enter an Owner's ID and their new Profession below to update our database.
 		<br></br>
@@ -158,6 +162,7 @@ o\:*         { behavior: url(#default#VML) }
 				   </tr>
 				 </table>
 	    </form>
+		</aside>
         </center>
 			
 		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32"
