--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ o\:*         { behavior: url(#default#VML) }
       <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
         onclick="mClk(this);" bgcolor="#2272a8">
         <b>
-          <a style="color: white" href="index.html">
+          <a style="color: white" href="../index.html">
             <font face="Tahoma" size="3">Landing Page</font>
           </a>
         </b>
