--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ o\:*         { behavior: url(#default#VML) }
       <td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
         onclick="mClk(this);" bgcolor="#2272a8">
         <b>
-          <a style="color: white" href="../index.html">
+          <a style="color: white" href="index.html">
             <font face="Tahoma" size="3">Landing Page</font>
           </a>
         </b>
@@ -134,10 +134,10 @@ o\:*         { behavior: url(#default#VML) }
         The premier database web service to search for Home Owners, Houses, Real-Estate Agents, and more!
       </h2><br>
 
-      <img src="/assets/affordable_house.jpg" width="1000" height="600">
+      <img src="assets/affordable_house.jpg" width="1000" height="600">
       <h3>Looking for your next House in a city near you? Browse for houses in any city using our City Search feature <a href="html/homesForSale.html">here</a>!</h3><br>
 
-      <img src="/assets/neighborhood.jpg" width="1000" height="600">
+      <img src="assets/neighborhood.jpg" width="1000" height="600">
       <h3>Are you a proud Home Owner who <i>isn't</i> registered with us? Join our community of registered Home Owners <a href="html/AddOwner.html">here!</a></h3></p>
 
       <br><br><br>
