--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -143,18 +143,18 @@ o\:*         { behavior: url(#default#VML) }
 			<table>
 				<tr>
 					<td>
-						<input type="text" name="AgentID" placeholder="AGENT ID *">&nbsp;
+						<input type="number" name="AgentID" placeholder="AGENT ID*" required>&nbsp;
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<input type="number" name="AgentName" size="25" placeholder="AGENT NAME *"></span></font>
+						<input type="text" name="AgentName" size="25" placeholder="AGENT NAME*" required></font>
 						&nbsp;
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<input type="text" name="AgentEmail" size="25" placeholder="AGENT EMAIL"></span></font>
+						<input type="email" name="AgentEmail" size="25" placeholder="AGENT EMAIL"></font>
 						&nbsp;
 					</td>
 				</tr>
