--- a/html/AddCompany.html
+++ b/html/AddCompany.html
@@ -136,12 +136,12 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="number" name="COMPANYID" placeholder="COMPANY ID *" min="0">&nbsp;
+							<input type="number" name="COMPANYID" placeholder="COMPANY ID *" min="0" required>&nbsp;
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<input type="text" name="COMPANYNAME" placeholder="COMPANY Name *" size="25"></span></font>&nbsp;
+							<input type="text" name="COMPANYNAME" placeholder="COMPANY Name *" size="25" required></span></font>&nbsp;
 						</td>
 					<tr>
 						<td>
