Updated css styling links to correctly reference the stylesheet and actually work.

--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Adding an Agent</title>
-	<link href="/styles.css" rel="stylesheet" />
+	<link href="../styles.css" rel="stylesheet" />
 
 	<link rel="File-List" href="indx_files/filelist.xml">
 
