--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>ComputeLoan</title>
-  <link href="/styles.css" rel="stylesheet" />
+  <link href="../styles.css" rel="stylesheet" />
   <!-- Paste this between the HEAD tags of your html document -->
 
   <script language="JavaScript">
