--- a/html/updateOwner.html
+++ b/html/updateOwner.html
@@ -2,7 +2,7 @@
 	<html>
 	  <head>
 	    <title>Update Owner</title>
-		<link href="/styles.css" rel="stylesheet" />
+		<link href="../styles.css" rel="stylesheet" />
 <!-- Paste this between the HEAD tags of your html document -->
 
 <script language="JavaScript">
