--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>   
 <META http-equiv="Content-Type" content="text/html; charset=windows-1256">
 <link rel="File-List" href="indx_files/filelist.xml">
-<link href="/styles.css" rel="stylesheet" />
+<link href="styles.css" rel="stylesheet" />
 <!-- Paste this between the HEAD tags of your html document -->
 
 <script language="JavaScript">
