--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Adding a Home</title>
-	<link href="/styles.css" rel="stylesheet" />
+	<link href="../styles.css" rel="stylesheet" />
 
 	<link rel="File-List" href="indx_files/filelist.xml">
 	<!-- Paste this between the HEAD tags of your html document -->
