--- a/html/update.html
+++ b/html/update.html
@@ -3,7 +3,7 @@
 	<html>
 	  <head>
 	    <title>Simple Update</title>
-		<link href="/styles.css" rel="stylesheet" />
+		<link href="../styles.css" rel="stylesheet" />
 <!-- Paste this between the HEAD tags of your html document -->
 
 <script language="JavaScript">
