Removed unnecessary </center> field that was messing with aside in DeleteHome, Fixed copypasta typo for AddAgent java file. changed input type of email in AddNewAgent back to text due to formatting issues with the 'email' type validator, but still tinkering with this.

--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -149,7 +149,7 @@
 						</tr>
 						<tr>
 							<td>
-								<label>Address</label><br><textarea name="ADDRESS" placeholder="ADDRESS*" size="25" required maxlength="140" rows="5"></textarea></font>&nbsp;
+								<input type="text" name="ADDRESS" placeholder="ADDRESS *" size="25" required maxlength="140" rows="5"></textarea></font>&nbsp;
 							</td>
 						<tr>
 							<td>
