--- a/html/DeleteHome.html
+++ b/html/DeleteHome.html
@@ -116,7 +116,7 @@ o\:*         { behavior: url(#default#VML) }
 	</p>
 	<center>
 		<aside style="background-color: #ededed; width:50%; padding:5%">
-			Enter the Home ID below to delete your home from our database</center>
+			Enter the Home ID below to delete your home from our database
 
 	<form method="post" action="CSI/DeleteHome.java">
 		<p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
@@ -140,7 +140,7 @@ o\:*         { behavior: url(#default#VML) }
 				</tr>
 			</table>
 	</form>
-		</aside>
+</aside>
 	</center>
 
 	<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
