Changed input field back to 'text' while tinkering with email validation type.

--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -143,7 +143,7 @@ o\:*         { behavior: url(#default#VML) }
 				</tr>
 				<tr>
 					<td>
-						<input type="email" name="AgentEmail" size="25" placeholder="AGENT EMAIL"></font>
+						<input type="text" name="AgentEmail" size="25" placeholder="AGENT EMAIL"></font>
 						&nbsp;
 					</td>
 				</tr>
